<resources>
    <string name="app_name">DailyJournal11</string>
    <string name="menu_content">Jonathan Probert\nJoshua Wentling\nJonathan Doerr</string>
    <string name="menu_name">Authors:</string>
    <string name="newJournal">New Journal</string>
    <string name="hint_in_design">Enter your text here...</string>
    <string name="record_audio_start">Start Recording</string>
    <string name="record_audio_stop">Stop Recording</string>
    <string name="play_audio_start">Start Playback</string>
    <string name="play_audio_stop">Stop Playback</string>
    <string name="delete_audio_start">Delete Audio</string>
    <string name="delete_audio_stop">Delete Audio</string>
    <string name="add_pictures">Add Pictures</string>
    <string name="Submit">Submit</string>
    <string name="Back">Back</string>
    <string name="delete_journal">Delete</string>

</resources>